panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_array_of_struct_completed_in_array_decl_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=104
      (f~1 `fn() -> void` (static f))
      (compound-statement
         (definition (funcs~4 `array<ptr<fn() -> ptr<struct X~3 complete>>; 8>` @0) (braced ∅))
         (expression
            (call `int` @64
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @72
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @80
                  (noop-type-conversion `ptr<char>` @80
                     (addressof `ptr<array<char; 5>>` @80
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (8 `unsigned long` @88)))
         (expression
            (call `int` @64
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @72
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @80
                  (noop-type-conversion `ptr<char>` @80
                     (addressof `ptr<array<char; 5>>` @80
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (8 `unsigned long` @88)))))
   (function-definition external stack-size=72
      (g~5 `fn() -> void` (static g))
      (compound-statement
         (definition (funcs~8 `array<ptr<fn() -> ptr<struct X~7 complete>>; 4>` @0) (braced ∅))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (noop-type-conversion `ptr<char>` @48
                     (addressof `ptr<array<char; 5>>` @48
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (4 `unsigned long` @56)))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (noop-type-conversion `ptr<char>` @48
                     (addressof `ptr<array<char; 5>>` @48
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (4 `unsigned long` @56)))))
   (function-definition external stack-size=24
      (main~9 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (f~1 `fn() -> void` (static f)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (g~5 `fn() -> void` (static g))))))))

----- stderr -----
