panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_assign_to_member_nested_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_static.c"
   (struct T~0
      (member x @0 `int`))
   (definition external (t~1 `struct T~0 complete` (static t))
      (braced
         (subobject +0 (42 `int`))))
   (struct ∅~2
      (member x @0 `int`)
      (member t @4 `struct T~0 complete`))
   (definition external (a~3 `struct ∅~2 complete` (static a))
      (braced
         (subobject +0 (123 `int`))
         (subobject +4 (42 `int`))))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (expression
            (assign `int` @0
               (member `int` @0 x +0
                  (t~1 `struct T~0 complete` (static t)))
               (27 `int` @0)))
         (expression
            (assign `int` @0
               (member `int` @0 x +0
                  (member `struct T~0 complete` @void t +4
                     (a~3 `struct ∅~2 complete` (static a))))
               (5 `int` @0)))
         (return
            (member `int` @0 x +0
               (member `struct T~0 complete` @void t +4
                  (a~3 `struct ∅~2 complete` (static a))))))))

----- stderr -----
