panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_assign_to_member_nested_via_pointer_static_3.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer_static_3.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer_static_3.c"
   (struct T~0
      (member x @0 `int`))
   (definition external (t~1 `struct T~0 complete` (static t))
      (braced
         (subobject +0 (42 `int`))))
   (struct U~2
      (member x @0 `int`)
      (member t @4 `struct T~0 complete`))
   (definition external (a~3 `struct U~2 complete` (static a))
      (braced
         (subobject +0 (123 `int`))
         (subobject +4 (42 `int`))))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (expression
            (assign `int` @0
               (member `int` @0 x +0
                  (t~1 `struct T~0 complete` (static t)))
               (27 `int` @0)))
         (definition (p~6 `ptr<struct T~0 complete>` @0)
            (addressof `ptr<struct T~0 complete>` @0
               (member `struct T~0 complete` @0 t +4
                  (a~3 `struct U~2 complete` (static a)))))
         (expression
            (assign `int` @8
               (member `int` @8 x +0
                  (deref `struct T~0 complete` @void (p~6 `ptr<struct T~0 complete>` @0)))
               (add `int` @8
                  (member `int` @8 x +0
                     (deref `struct T~0 complete` @void (p~6 `ptr<struct T~0 complete>` @0)))
                  (1 `int` @12))))
         (return
            (member `int` @8 x +0
               (member `struct T~0 complete` @void t +4
                  (a~3 `struct U~2 complete` (static a))))))))

----- stderr -----
